--- a/hw5(mvc)/Views/Home/About.cshtml
+++ b/hw5(mvc)/Views/Home/About.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    var user = ViewBag.User as User;
+﻿@model UserInfo
+@{
+    
 }
 
 <div class="container">
@@ -7,7 +8,7 @@
         <div class="row">
             <div class="col-sm-8">
                 <h2>Welcome to my portfolio</h2>
-                <p>Hello, my name is @user.Name, I am @user.Age years old and this is my portfolio.Currently, I am actively learning C# and ASP.NET, deepening my knowledge in these technologies to develop web applications. I have experience working with Python, C++, JavaScript, and SQL. I also use Entity Framework Core for working with databases</p>
+                <p>Hello, my name is @Model.Name and this is my portfolio.Currently, I am actively learning C# and ASP.NET, deepening my knowledge in these technologies to develop web applications. I have experience working with Python, C++, JavaScript, and SQL. I also use Entity Framework Core for working with databases</p>
                 <p>Below you can check out my projects.</p>
             </div>
         </div>
@@ -58,16 +59,16 @@
                     <th>Progress bar</th>
                     <th>%</th>
                 </tr>
-                @foreach (var skill in user.Skills)
+                @foreach (var skill in Model.Skills)
                 {
                     <tr>
                         <td>@skill.Title</td>
                         <td>
-                            <div class="progress">
+@*                             <div class="progress">
                                 <div class="progress-bar" style="width:@skill.Level%;"></div>
                             </div>
                         </td>
-                        <td>@skill.Level %</td>
+                        <td>@skill.Level %</td> *@
                     </tr>
                 }
             </tbody>
