--- a/hw5(mvc)/Views/Shared/_Layout.cshtml
+++ b/hw5(mvc)/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserInfo" asp-action="Index">Users info</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
+                        </li>
                     </ul>
                 </div>
             </div>
