--- a/hw5(mvc)/Views/UserInfo/Create.cshtml
+++ b/hw5(mvc)/Views/UserInfo/Create.cshtml
@@ -10,7 +10,7 @@
 
 <div>
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <form method="post" asp-controller="UserInfo" asp-action="Create">
+    <form method="post" enctype="multipart/form-data" asp-controller="UserInfo" asp-action="Create">
         <div class="card">
             <div class="card-body">
 
@@ -49,7 +49,16 @@
                     @Html.TextBoxFor(x => x.Birthday, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
                     @Html.ValidationMessageFor(x => x.Birthday, null, new { @class = "text-danger" })
                 </div>
-
+                <div class="mb-3">
+                    @Html.LabelFor(x => x.Image, new { @class = "form-label" })
+                    @Html.TextBoxFor(x => x.Image, new { @class = "form-control", type = "file", accept = "*.jpg,*.jpeg,*.png" })
+                    @Html.ValidationMessageFor(x => x.Image, null, new { @class = "text-danger" })
+                </div>
+                <div class="mb-3">
+                    @Html.LabelFor(x => x.Gallery, new { @class = "form-label" })
+                    @Html.TextBoxFor(x => x.Gallery, new { @class = "form-control", type = "file", accept = "*.jpg,*.jpeg,*.png", multiple = true })
+                    @Html.ValidationMessageFor(x => x.Gallery, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="card-footer">
                 <button class="btn btn-primary" type="submit">Save</button>
