--- a/hw5(mvc)/Views/Home/About.cshtml
+++ b/hw5(mvc)/Views/Home/About.cshtml
@@ -52,7 +52,7 @@
     <div class="text-center">
         <h2>My skills</h2>
 
-        <table class="table table-hover">
+@*         <table class="table table-hover">
             <tbody>
                 <tr>
                     <th>Title</th>
@@ -64,14 +64,14 @@
                     <tr>
                         <td>@skill.Title</td>
                         <td>
-@*                             <div class="progress">
+                            <div class="progress">
                                 <div class="progress-bar" style="width:@skill.Level%;"></div>
                             </div>
                         </td>
-                        <td>@skill.Level %</td> *@
+                        <td>@skill.Level %</td>
                     </tr>
                 }
             </tbody>
-        </table>
+        </table> *@
     </div>
 </div>
