--- a/hw5(mvc)/Views/UserInfo/Edit.cshtml
+++ b/hw5(mvc)/Views/UserInfo/Edit.cshtml
@@ -16,52 +16,9 @@
     <form method="post" enctype="multipart/form-data" asp-controller="UserInfo" asp-action="Edit" asp-route-id="@ViewData["id"]">
         <div class="card">
             <div class="card-body">
-
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Name, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.Name, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Email, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control", type="email"})
-                    @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Experience, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Experience, new { @class = "form-control", type = "number", min = 0, max = 99, step = 1 })
-                    @Html.ValidationMessageFor(x => x.Experience, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Salary, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Salary, new { @class = "form-control", type = "number", min = 0, step = 0.01 })
-                    @Html.ValidationMessageFor(x => x.Salary, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.ProfessionId, new { @class = "form-label" })
-                    @Html.DropDownListFor(x => x.ProfessionId, list, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.ProfessionId, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Description, new { @class = "form-label" })
-                    @Html.TextAreaFor(x => x.Description, new { @class = "form-control", rows = 5 })
-                    @Html.ValidationMessageFor(x => x.Description, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Birthday, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Birthday, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
-                    @Html.ValidationMessageFor(x => x.Birthday, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Image, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Image, new { @class = "form-control", type = "file", accept = "*.jpg,*.jpeg,*.png" })
-                    @Html.ValidationMessageFor(x => x.Image, null, new { @class = "text-danger" })
-                </div>
-                <div class="mb-3">
-                    @Html.LabelFor(x => x.Gallery, new { @class = "form-label" })
-                    @Html.TextBoxFor(x => x.Gallery, new { @class = "form-control", type = "file", accept = "*.jpg,*.jpeg,*.png", multiple = true })
-                    @Html.ValidationMessageFor(x => x.Gallery, null, new { @class = "text-danger" })
-                </div>
+                @await Html.PartialAsync("_UserInfoFormFields", Model, new ViewDataDictionary(ViewData) {
+                    {"professions", list}
+                })
             </div>
             <div class="card-footer">
                 <button class="btn btn-primary" type="submit">Save</button>
@@ -75,16 +32,15 @@
             <tbody>
                 @foreach (var userSkill in userSkills)
                 {
-                    var currentSkill = skills.First(x => x.Id == userSkill.SkillId);
-                    <tr data-model-id="@userSkill.SkillId">
+                    <tr data-model-id="@userSkill.Id">
                         <td>
-                            @if (currentSkill.Icon != null)
+                            @if (userSkill.Skill.Icon != null)
                             {
-                                <img style="max-width: 50px;" class="img-thumbnail" src="@currentSkill.Icon.Src" />
+                                <img style="max-width: 50px;" class="img-thumbnail" src="@userSkill.Skill.Icon.Src" />
                             }
                         </td>
                         <td>
-                            @currentSkill.Title
+                            @userSkill.Skill.Title
                         </td>
                         <td>
                             <input class="skill-level form-control" type="number" min="1" max="100" value="@userSkill.Level" />
@@ -95,6 +51,7 @@
                         </td>
                     </tr>
                 }
+                
                 @foreach (var skill in availableSkills)
                 {
                     <tr data-model-id="@skill.Id">
@@ -110,8 +67,7 @@
                         <td>
                             <input class="skill-level" typeof="number" min="1" max="100" value="" />
                         </td>
-                        <td colspan="2">
-                            
+                        <td>
                             <button class="btn btn-success add-skill">Add</button>
                         </td>
                     </tr>
@@ -142,7 +98,7 @@
                     Level: level
                 };
 
-                fetch("/UserInfo/AddSkill", {
+                fetch(`/UserInfo/AddSkill/${userId}`, {
                     method: "post",
                     headers: {
                         "Content-type": "application/json"
@@ -168,7 +124,7 @@
                     UserId: userId
                 }
 
-                fetch("/UserInfo/DeleteSkill", {
+                fetch(`/UserInfo/DeleteSkill/${id}`, {
                     method: "post",
                     headers: {
                         "Content-type": "application/json"
