--- a/hw5(mvc)/Views/UserInfo/Create.cshtml
+++ b/hw5(mvc)/Views/UserInfo/Create.cshtml
@@ -2,9 +2,8 @@
 @model UserInfoForm
 @{
     ViewData["Title"] = "Create User info";
-    var i = 0;
-    var list = new SelectList(Model.Professions.Select(
-        x => new { Id = i++, Title = x })
+    var list = new SelectList(Model.
+        Professions
         .ToList(), "Id", "Title");
 }
 
