--- a/hw5(mvc)/Views/UserInfo/View.cshtml
+++ b/hw5(mvc)/Views/UserInfo/View.cshtml
@@ -19,7 +19,7 @@
     </div>
     }
     <h3>Email @Model.Email</h3>
-    <div>Profession: @Model.Profession</div>
+    <div>Profession: @Model.Profession.Title</div>
     
     <div class="text-center">
         <h2>My Gallery</h2>
