--- a/hw5(mvc)/wwwroot/css/site.css
+++ b/hw5(mvc)/wwwroot/css/site.css
@@ -20,3 +20,10 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.card-img-top {
+    width: 100%; /* Растягивает изображение по ширине */
+    height: 250px; /* Фиксированная высота */
+    object-fit: cover; /* Обрезает изображение, сохраняя пропорции */
+    border-radius: 8px; /* Скругление углов */
+}
