--- a/hw5(mvc)/Areas/Auth/Views/_ViewImports.cshtml
+++ b/hw5(mvc)/Areas/Auth/Views/_ViewImports.cshtml
@@ -1,5 +1,4 @@
 ﻿@using hw5_mvc_
 @using hw5_mvc_.Models
-@using hw5_mvc_.Models.Forms
-@using System.Security.Claims
+@using hw5_mvc_.Areas.Auth.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
