--- a/hw5(mvc)/Views/Shared/_Layout.cshtml
+++ b/hw5(mvc)/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -23,15 +24,43 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="UserInfo" asp-action="Index">Users info</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Profession" asp-action="Index">Professions</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="UserInfo" asp-action="Index">Users info</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Profession" asp-action="Index">Professions</a>
+                            </li>
+                        }
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a class="nav-link dropdown-toggle text-dark" href="#" data-bs-toggle="dropdown">
+                                @User.Claims.First(x => x.Type == ClaimTypes.Email).Value
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="authDropdown">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Auth" asp-controller="Account" asp-action="Logout">Logout</a>
+                                </li>
+                            </ul>
+                        }
+                        else
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" data-bs-toggle="dropdown">
+                                    Login/Register
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="authDropdown">
+                                    <li><a class="dropdown-item" asp-area="Auth" asp-controller="Account" asp-action="Login">Login</a></li>
+                                    <li><a class="dropdown-item" asp-area="Auth" asp-controller="Account" asp-action="Register">Register</a></li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
