--- a/hw5(mvc)/Views/Shared/_Layout.cshtml
+++ b/hw5(mvc)/Views/Shared/_Layout.cshtml
@@ -40,14 +40,28 @@
                     <ul class="navbar-nav ms-auto">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <a class="nav-link dropdown-toggle text-dark" href="#" data-bs-toggle="dropdown">
-                                @User.Claims.First(x => x.Type == ClaimTypes.Email).Value
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="authDropdown">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="Auth" asp-controller="Account" asp-action="Logout">Logout</a>
-                                </li>
-                            </ul>
+                            <li class="nav-item dropdown">
+                                @{
+                                    var avatarSrc = User.Claims.FirstOrDefault(x => x.Type == "Avatar")?.Value ?? "";
+                                }
+                                <a class="nav-link d-flex align-content-center align-items-center dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    @if (!string.IsNullOrEmpty(avatarSrc))
+                                    {
+                                        <div class="avatar mx-1" style="background-image: url(@avatarSrc"></div>
+                                    }
+                                    <div>@User.Claims.First(x => x.Type == ClaimTypes.Email).Value</div>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Auth" asp-controller="Profile" asp-action="Index">Profile</a>
+                                    </li>
+                                    <li>
+                                        <form asp-area="Auth" asp-controller="Account" asp-action="Logout" method="post">
+                                            <button type="submit" class="dropdown-item">Logout</button>
+                                        </form>
+                                    </li>
+                                </ul>
+                            </li>
                         }
                         else
                         {
